# kytin-protocol

./: .gitignore  MANIFEST.md  README.md  buy_resin.ts  check_status.ts  check_sync.ts  colosseum_sync.ts  comment_on_5078.ts  forum_post.ts  get_project_url.ts  lazarus_recover.ts  mock_heartbeat.ts  package.json  post_mission_report.ts  reply_to_comment.ts  start_node.ts  state.json  submission.json  submit_project.ts  titan.ts  watchdog.ts
bridge/: SKILL.md  package-lock.json  package.json  tsconfig.json
bridge/src/: client.ts  config.ts  handler.ts  index.ts  policy.ts  skill.ts
cli/: kytin-init.ts  package.json
cli/src/: config.ts  migrate.ts
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/explorer/: page.tsx
dashboard/src/app/migrate/: page.tsx
dashboard/src/app/recovery/: page.tsx
dashboard/src/components/: Header.tsx  HeartbeatPulse.tsx  ResinTank.tsx  SentinelMap.tsx  VitalityStream.tsx
dashboard/src/lib/: kytin-api.ts  solana-api.ts
docs/: MISSION_CONTROL.md  MISSION_REPORT.md  ROADMAP.md  WHITEPAPER.md
sentinel/: CMakeLists.txt
sentinel/.cache/clangd/index/: kytin.hpp.39D88268F6449893.idx  kytin_tpm.cpp.469309B7CBC782A8.idx  kytin_tpm.hpp.6C54D44543751A82.idx  main.cpp.0DD50FB992DAA3B0.idx
sentinel/include/: kytin.hpp  kytin_tpm.hpp
sentinel/src/: config.hpp  kytin_tpm.cpp  main.cpp
solana/: Anchor.toml
solana/programs/kytin-solana/: Cargo.toml
solana/programs/kytin-solana/src/: lib.rs
